Canvas LowLatency: wire lowLatency in getContextAttributes()

This CL wires |lowLatency| in WebGL's getContextAttributes(),
and adds LayoutTests entries wherever appropriate.

Also cleans up the {} in canvas_rendering_context.cc (adds or
removes them where appropriate).

Bug: 895918
Change-Id: I08872f45cbadbf0772c92a761dee15243bd4f17a
Reviewed-on: https://chromium-review.googlesource.com/c/1294301
Reviewed-by: Kai Ninomiya <kainino@chromium.org>
Reviewed-by: Fernando Serboncini <fserb@chromium.org>
Commit-Queue: Miguel Casas <mcasas@chromium.org>
Cr-Commit-Position: refs/heads/master@{#601943}
Former-commit-id: 9e9987d9eb2925d5454685a7374455d5aebae9a7